# wrangle-gl

./: .gitattributes  CMakeLists.txt  README.md  build.sh  wrangle-gl.sln
generator/: .editorconfig  Generator.cs  GeneratorEGL.cs  GeneratorGL.cs  GeneratorGLES.cs  GeneratorGLX.cs  GeneratorVulkan.cs  GeneratorWGL.cs  Program.cs  wrangle-gl-generator.csproj
generator/Properties/: launchSettings.json
include/: wrangle-egl.h  wrangle-gl.h  wrangle-glcore.h  wrangle-gles.h  wrangle-glx.h  wrangle-vulkan.h  wrangle-wgl.h  wrangle.h
include/GL/: glext.h  glx.h  glxext.h  wgl.h
include/GLES/: glext.h
include/GLES2/: gl2ext.h
include/GLES3/: gl3.h  gl31.h
khronos/: license.txt  regenerate-api.sh  update-registry.sh  update-repository.readme  update-repository.sh
khronos/api/EGL/: egl.h  eglext.h
khronos/api/GL/: wglext.h
khronos/api/GLES/: gl.h
khronos/api/GLES2/: gl2.h
khronos/emulator/ARM/: EULA.txt  libEGL.lib  libGLESv2.lib  libMaliEmulator.lib
khronos/repository/api/: diag.txt  egl.xml
khronos/repository/api/EGL/: egl.h  eglext.h
khronos/repository/api/GL/: glext.h  glx.h  glxext.h  wgl.h  wglext.h
khronos/repository/api/GLES/: gl.h  glext.h
khronos/repository/api/GLES2/: gl2.h  gl2ext.h
khronos/repository/api/GLES3/: gl3.h  gl31.h
projects/: regenerate.cmd
projects/cmake/: visual-studio-androidpp.cmake
src/: CMakeLists.txt  wrangle-egl.cpp  wrangle-gl.cpp  wrangle-glcore.cpp  wrangle-gles-api.cpp  wrangle-gles.cpp  wrangle-glx.cpp  wrangle-vulkan.cpp  wrangle-wgl.cpp
src/generator/: Generator.cs  GeneratorEGL.cs  GeneratorGL.cs  GeneratorGLCore.cs  GeneratorGLES.cs  GeneratorGLX.cs  GeneratorWGL.cs  Program.cs  wrangle-gl-generator.csproj  wrangle-gl-generator.sln
src/generator/Properties/: AssemblyInfo.cs
tests/: CMakeLists.txt  test-egl.cpp  test-gl.cpp  test-gles.cpp  test-glx.cpp  test-vulkan.cpp  test-wgl.cpp
